Closed Bug 1715660 Opened 3 years ago Closed 3 years ago

WSEnable.cpp: warning: ISO C++11 does not allow conversion from string literal to 'LPWSTR'

Categories

(Thunderbird :: Search, defect)

defect

Tracking

(thunderbird_esr78 wontfix)

RESOLVED FIXED
91 Branch
Tracking Status
thunderbird_esr78 --- wontfix

People

(Reporter: rjl, Assigned: rjl)

Details

Attachments

(1 file)

comm/mail/components/search/wsenable/WSEnable.cpp(49,9): warning: ISO C++11 does not allow conversion from string literal to 'LPWSTR' (aka 'wchar_t *') [-Wwritable-strings]

Shows up multiple times on Windows builds.

Fixes compiler warning from -Wwritable-strings.

Assignee: nobody → rob
Status: NEW → ASSIGNED
Attachment #9226244 - Attachment description: Bug 1715660 - Explicitly cast string literals in WSEnable RegKey struct to LPWSTR. r?benc → Bug 1715660 - Use LPCWSTR rather then LPWSTR for WSEnable RegKey struct. r?benc
Attachment #9226244 - Attachment description: Bug 1715660 - Use LPCWSTR rather then LPWSTR for WSEnable RegKey struct. r?benc → Bug 1715660 - Use LPCWSTR rather then LPWSTR for WSEnable RegKey struct. r=benc
Target Milestone: --- → 91 Branch

Pushed by thunderbird@calypsoblue.org:
https://hg.mozilla.org/comm-central/rev/c45677cb4c9c
Use LPCWSTR rather then LPWSTR for WSEnable RegKey struct. r=benc

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: