Bug 1715660 - Use LPCWSTR rather then LPWSTR for WSEnable RegKey struct. r=benc

Fixes compiler warning from -Wwritable-strings.

Differential Revision: https://phabricator.services.mozilla.com/D117375